fetch: se agregaron varios paquetes y clases relacionadas con la autenticación para el login. Entre ellos los paquetes auth y jwt, con clases como AuthController, para la adminsitración de los endpoints públicos. AuthService para poder utilizar el jwt. Se sube sin poder compilar dado que se tiene que continuar con la función en otro equipo, por lo que se espera otro commit y push fix